--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 quarkus.http.port=8080
 quarkus.application.name=water-flow-control
+
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=${DB_USER}
+quarkus.datasource.password=${DB_PASSWORD}
+quarkus.datasource.jdbc.url=${DB_URL}
+
+quarkus.hibernate-orm.database.generation=update
+quarkus.hibernate-orm.dialect=org.hibernate.dialect.PostgreSQLDialect
