--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
     </dependencies>
 
     <build>
+        <finalName>water-flow-control-${project.version}</finalName>
         <plugins>
             <plugin>
                 <groupId>${quarkus.platform.group-id}</groupId>
